<resources>
    <string name="app_name">Playlist maker</string>
    <string name="mediateca">Медиатека</string>
    <string name="star_music">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="mediateca_is_not_exist">Ваша медиатека пуста</string>
    <string name="search">Поиск</string>
    <string name="setings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="send_app">Поделиться приложением</string>
    <string name="send_help">Написать в поддержку</string>
    <string name="user_accept">Пользовательское соглашение</string>

</resources>